--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -7,12 +7,50 @@
     <link rel="stylesheet" href="{% static 'base/styles.css' %}"></link>
   </head>
   <body>
-    <div id="header">{% block header %}header{% endblock %}</div>
-    <div id="navigation">{% block navigation %}navigation{% endblock %}</div>
-    <div id="content">{% block content %}content{% endblock %}</div>
-    {% block scripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    {% endblock %}
+    <div id="header">
+      {% block header %}
+      <img
+        class="image-responsive"
+        src="{% static 'base/banner1.jpg' %}"
+        alt="wedding banner"
+        style="width:100%;"
+        >
+      {% endblock %}
+    </div>
+    <div id="navigation">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#navbar-collapse-1"
+              >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Jenn and Ben</a>
+          </div>
+          <div class="collapse navbar-collapse" id="navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="/">The Day</a></li>
+              <li><a href="/">Travel</a></li>
+              <li><a href="/">People</a></li>
+              <li><a href="/">RSVP</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="container">
+      <div id="content">{% block content %}content{% endblock %}</div>
+      {% block scripts %}
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+      {% endblock %}
+    </div>
   </body>
 </html>
