--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -19,7 +19,7 @@
     </div>
     <div id="navigation">
       <nav class="navbar navbar-default">
-        <div class="container-fluid">
+        <div class="container">
           <div class="navbar-header">
             <button
               type="button"
@@ -38,8 +38,8 @@
             <ul class="nav navbar-nav">
               <li><a href="/">The Day</a></li>
               <li><a href="/">Travel</a></li>
-              <li><a href="/">People</a></li>
-              <li><a href="/">RSVP</a></li>
+              <li><a href="/">Our People</a></li>
+              <li><a href="/">Attendance</a></li>
             </ul>
           </div>
         </div>
@@ -51,6 +51,19 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
       {% endblock %}
+      <div class="clearfix">&nbsp;</div>
+      <div class="clearfix">&nbsp;</div>
+      <div class="clearfix">&nbsp;</div>
+      <div class="clearfix">&nbsp;</div>
+      <div class="row">
+        <div class="col-xs-12">
+          <p>
+            <small>
+              &copy; <a href="mailto:ben@rabinovitch.ca">Ben Rabinovitch</a> 2015
+            </small>
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
