--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -36,37 +36,17 @@
           </div>
           <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li>
-                <a
-                  class="{% block nav_active_the_day %}{% endblock %}"
-                  href="/"
-                  >
-                  The Day
-                </a>
+              <li class="{% block nav_active_the_day %}{% endblock %}">
+                <a href="/the-day">The Day</a>
               </li>
-              <li>
-                <a
-                  class="{% block nav_active_travel %}{% endblock %}"
-                  href="/"
-                  >
-                  Travel
-                </a>
+              <li class="{% block nav_active_travel %}{% endblock %}">
+                <a href="/">Travel</a>
               </li>
-              <li>
-                <a
-                  class="{% block nav_active_people %}{% endblock %}"
-                  href="/"
-                  >
-                  Our People
-                </a>
+              <li class="{% block nav_active_people %}{% endblock %}">
+                <a href="/">Our People</a>
               </li>
-              <li>
-                <a
-                  class="{% block nav_active_rsvp %}{% endblock %}"
-                  href="/"
-                  >
-                  Attendance
-                </a>
+              <li class="{% block nav_active_rsvp %}{% endblock %}">
+                <a href="/">Attendance</a>
               </li>
             </ul>
           </div>
