New page: travelling to vancouver

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -40,7 +40,7 @@
                 <a href="/the-day">The Day</a>
               </li>
               <li class="{% block nav_active_travel %}{% endblock %}">
-                <a href="/">Travel</a>
+                <a href="/travel">Travel</a>
               </li>
               <li class="{% block nav_active_people %}{% endblock %}">
                 <a href="/">People</a>
