--- a/backend/static/base/styles.css
+++ b/backend/static/base/styles.css
@@ -14,7 +14,7 @@ body {
   font-size: 20px;
   font-family: "Cardo";
 }
-a { color: #9932CC; }
+a, a:visited { color: #9932CC; }
 a:hover {
   color: #555555;
   text-decoration: none;
