Travel page typo fix

--- a/backend/static_info/templates/static_info/travel.html
+++ b/backend/static_info/templates/static_info/travel.html
@@ -22,7 +22,7 @@
       The weekend of our wedding is High Season in Vancouver so everything is going to be busy; book things early to make sure you don't miss out!
     </p>
     <p>
-      Downtown Vancouver is full of fantastic places to eat, and amazing things to do. <a href="http://www.vancitybuzz.com/" target="_blank">VancityBuzz</a> has some great recommendations for nearly everything you might like to do in our beautify city!
+      Downtown Vancouver is full of fantastic places to eat, and amazing things to do. <a href="http://www.vancitybuzz.com/" target="_blank">VancityBuzz</a> has some great recommendations for nearly everything you might like to do in our beautiful city!
     </p>
     <p>
       If you'd like to book a hotel, we'll post some information here on a few hotels near The Vancouver Rowing Club soon.
