New pages: people + rsvp
- placeholder content for now

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -43,10 +43,10 @@
                 <a href="/travel">Travel</a>
               </li>
               <li class="{% block nav_active_people %}{% endblock %}">
-                <a href="/">People</a>
+                <a href="/people">People</a>
               </li>
               <li class="{% block nav_active_rsvp %}{% endblock %}">
-                <a href="/">Attendance</a>
+                <a href="/rsvp">R.S.V.P.</a>
               </li>
             </ul>
           </div>
