New model structure
- remove Invite model
- use Event, Guest + GuestGroup models

--- a/backend/rsvp/templates/rsvp/index.html
+++ b/backend/rsvp/templates/rsvp/index.html
@@ -25,15 +25,15 @@
       >
       {% csrf_token %}
       <div class="form-group">
-        <label class="col-sm-4 control-label" for="">Invite Word</label>
+        <label class="col-sm-4 control-label" for="invite_word">Invite Word</label>
         <div class="col-sm-5">
           <div class="input-group">
             <input
-            class="form-control input-lg"
-            id="invite_word"
-            name="invite_word"
-            placeholder="Border Collie"
-            >
+              class="form-control input-lg"
+              id="invite_word"
+              name="invite_word"
+              placeholder="Border Collie"
+              >
             <span class="input-group-btn">
               <button
                 class="btn btn-default btn-lg"
