--- a/backend/rsvp/templates/rsvp/detail.html
+++ b/backend/rsvp/templates/rsvp/detail.html
@@ -18,9 +18,90 @@
     <h1>
       R&eacute;pondez S'il Vous Pla&icirc;t
     </h1>
-    <p>
-      details
-    </p>
+    <form
+      class="form-horizontal"
+      action="{% url 'rsvp_detail' guest_group.code.lower %}"
+      method="post"
+      >
+      {% csrf_token %}
+      {% if error %}
+      <div class="alert alert-warning">
+        {{ error }}
+      </div>
+      {% endif %}
+      <div class="row">
+        <div class="col-xs-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Attendance</h3>
+            </div>
+            <div class="panel-body">
+              {% for guest in guest_group.guest_set.all %}
+              <div class="row">
+                <div class="col-xs-10">
+                  <input
+                    class="form-control input-lg"
+                    id="guest_{{ guest.id }}_name"
+                    name="guest_{{ guest.id }}_name"
+                    placeholder=""
+                    value="{{ guest.name }}"
+                    >
+                </div>
+                <div class="col-xs-2">
+                  <input
+                    type="checkbox"
+                    {% if guest.attending %}checked="checked"{% endif %}
+                    >
+                </div>
+              </div>
+              <div class="clearfix">&nbsp;</div>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Events</h3>
+            </div>
+            <div class="panel-body">
+              {% for event in guest_group.event_set.all %}
+              <p>
+                {{ event.name }}
+                ~
+                {{ event.datetime_start | date:'f a' }}
+              </p>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label class="col-sm-4 control-label" for="notes">Dietary Notes &amp; Comments</label>
+        <div class="col-sm-8">
+          <textarea
+            class="form-control"
+            id="notes"
+            name="notes"
+            placeholder=""
+            rows="4"
+            >
+            {{ guest_group.notes }}
+          </textarea>
+        </div>
+      </div>
+
+      <div>
+        <button
+          class="btn btn-default btn-lg pull-right"
+          type="submit"
+          >
+          Submit Response
+        </button>
+      </div>
+
+    </form>
   </div>
 </div>
 {% endblock %}
