--- a/backend/rsvp/templates/rsvp/detail.html
+++ b/backend/rsvp/templates/rsvp/detail.html
@@ -29,68 +29,36 @@
         {{ error }}
       </div>
       {% endif %}
-      <div class="row">
-        <div class="col-xs-6">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Attendance</h3>
-            </div>
-            <div class="panel-body">
-              {% for guest in guest_group.guest_set.all %}
-              <div class="row">
-                <div class="col-xs-10">
-                  <input
-                    class="form-control input-lg"
-                    id="guest_{{ guest.id }}_name"
-                    name="guest_{{ guest.id }}_name"
-                    placeholder=""
-                    value="{{ guest.name }}"
-                    >
-                </div>
-                <div class="col-xs-2">
-                  <input
-                    type="checkbox"
-                    {% if guest.attending %}checked="checked"{% endif %}
-                    >
-                </div>
-              </div>
-              <div class="clearfix">&nbsp;</div>
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-6">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Events</h3>
-            </div>
-            <div class="panel-body">
-              {% for event in guest_group.event_set.all %}
-              <p>
-                {{ event.name }}
-                ~
-                {{ event.datetime_start | date:'f a' }}
-              </p>
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="form-group">
-        <label class="col-sm-4 control-label" for="notes">Dietary Notes &amp; Comments</label>
-        <div class="col-sm-8">
-          <textarea
-            class="form-control"
-            id="notes"
-            name="notes"
-            placeholder=""
-            rows="4"
-            >
-            {{ guest_group.notes }}
-          </textarea>
-        </div>
-      </div>
+      <table class="table table-hover">
+        <thead>
+          {% for guest in guest_group.guest_set.all %}
+          {% if forloop.first %}
+          <tr>
+            <th></th>
+            {% for event in guest.events.all %}
+            <th>
+              {{ event.name }} ~ {{ event.datetime_start | date:'f a' }}
+            </th>
+            {% endfor %}
+          </tr>
+        </thead>
+        <tbody>
+          {% endif %}
+          <tr>
+            <td>{{ guest.name }}</td>
+            {% for attendance in guest.attendance_set.all %}
+            <td>
+              <input
+                name="attendance_{{ attendance.id }}"
+                type="checkbox"
+                {% if attendance.attending %}checked="checked"{% endif %}
+                >
+            </td>
+            {% endfor %}
+          </tr>
+          {% endfor %}
+      </table>
 
       <div>
         <button
