Copy for RSVP screens

--- a/backend/rsvp/templates/rsvp/detail.html
+++ b/backend/rsvp/templates/rsvp/detail.html
@@ -18,6 +18,14 @@
     <h1>
       R&eacute;pondez S'il Vous Pla&icirc;t
     </h1>
+
+    <p>
+      Along with our parents, we sincerly hope that you will join us on August 29th, 2015 at the <a href="https://www.vancouverrowingclub.ca/" target="_blank">Vancouver Rowing Club</a> in Vancouver, British Columbia.
+    </p>
+    <p>
+      Please be sure that the boxes are checked for events that you will be attending and click on "Submit Response" when you are done.
+    </p>
+
     <form
       class="form-horizontal"
       action="{% url 'rsvp_detail' guest_group.code.lower %}"
