--- a/backend/rsvp/templates/rsvp/index.html
+++ b/backend/rsvp/templates/rsvp/index.html
@@ -18,6 +18,16 @@
     <h1>
       R&eacute;pondez S'il Vous Pla&icirc;t
     </h1>
+
+    <p>
+      We are very excited for you to join us on our wedding day! We've been working hard to make it fantastic, but we need our family and friends with us to make it truly memorable.
+    </p>
+    <p>
+      Please enter the word we've included with your invitation into the input below and the site will pull up your information.
+    </p>
+
+    <div class="clearfix">&nbsp;</div>
+
     <form
       class="form-horizontal"
       action="{% url 'rsvp' %}"
@@ -25,14 +35,14 @@
       >
       {% csrf_token %}
       <div class="form-group">
-        <label class="col-sm-4 control-label" for="invite_word">Invite Word</label>
+        <label class="col-sm-4 control-label" for="invite_word"></label>
         <div class="col-sm-5">
           <div class="input-group">
             <input
               class="form-control input-lg"
               id="invite_word"
               name="invite_word"
-              placeholder="Border Collie"
+              placeholder="Invite Word"
               >
             <span class="input-group-btn">
               <button
