--- a/backend/static_info/templates/static_info/itinerary.html
+++ b/backend/static_info/templates/static_info/itinerary.html
@@ -19,7 +19,7 @@
       The Day
     </h1>
     <p>
-      We hope that you'll join us at the <a href="https://www.vancouverrowingclub.ca/" target="_blanK">Vancouver Rowing Club</a> in Stanley Park on Saturday August 29th, 2015.
+      We hope that you'll join us at the <a href="https://www.vancouverrowingclub.ca/" target="_blank">Vancouver Rowing Club</a> in Stanley Park on Saturday August 29th, 2015.
     </p>
     <p>
       The afternoon will begin with a patio ceremony overlooking the seawall and harbour toward the evening sun.
