Copy + images for wedding party / people page

--- a/backend/static_info/templates/static_info/people.html
+++ b/backend/static_info/templates/static_info/people.html
@@ -16,11 +16,70 @@
 <div class="row">
   <div class="col-xs-12">
     <h1>
-      The Bridal Party
+      The Wedding Party
     </h1>
     <p>
-      We know you're dying to know who's in our party; we are too!
+      This group of people are our closest friends. When we sat down to write a little bit about them we found ourselves repeating the same words of affection. It means a tremendous amount to us that they'll all be there with us on our wedding day.
     </p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h2>
+      Bride's Maids
+    </h2>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="{% static 'static_info/people/angela.jpg' %}" />
+      <div class="caption">
+        <p>
+          Angela, Maid of Honour
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-6 col-md-4 col-md-offset-2">
+    <div class="thumbnail">
+      <img src="{% static 'static_info/people/rachel.jpg' %}" />
+      <div class="caption">
+        <p>
+          Rachel, Bride's Maid
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <h2>Groom's Men</h2>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="{% static 'static_info/people/rob.jpg' %}" />
+      <div class="caption">
+        <p>
+          Rob, Best Man
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-6 col-md-4 col-md-offset-2">
+    <div class="thumbnail">
+      <img src="{% static 'static_info/people/damir.jpg' %}" />
+      <div class="caption">
+        <p>
+          Damir, Groom's Man
+        </p>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
