--- a/backend/rsvp/templates/rsvp/index.html
+++ b/backend/rsvp/templates/rsvp/index.html
@@ -42,7 +42,7 @@
               class="form-control input-lg"
               id="invite_word"
               name="invite_word"
-              placeholder="Invite Word"
+              placeholder="R.S.V.P. Word"
               >
             <span class="input-group-btn">
               <button
