Copy changes + add Heather, Cam to wedding party

--- a/backend/rsvp/templates/rsvp/index.html
+++ b/backend/rsvp/templates/rsvp/index.html
@@ -23,7 +23,7 @@
       We are very excited for you to join us on our wedding day! We've been working hard to make it fantastic, but we need our family and friends with us to make it truly memorable.
     </p>
     <p>
-      Please enter the word we've included with your invitation into the input below and the site will pull up your information.
+      Please enter the word we've included with your invitation into the input below and the site will fetch your information.
     </p>
 
     <div class="clearfix">&nbsp;</div>
