--- a/backend/static_info/templates/static_info/itinerary.html
+++ b/backend/static_info/templates/static_info/itinerary.html
@@ -22,7 +22,7 @@
       We hope that you'll join us at the <a href="https://www.vancouverrowingclub.ca/" target="_blank">Vancouver Rowing Club</a> in Stanley Park on Saturday August 29th, 2015.
     </p>
     <p>
-      The afternoon will begin with a patio ceremony overlooking the seawall and harbour toward the afternoon sun.
+      The afternoon will begin with a patio ceremony overlooking the seawall and harbour toward the afternoon sun. We ask that all guests please be seated by 3 p.m.
     </p>
     <p>
       Our guests will then be invited to enjoy a cocktail at the Rowing Club and tour the park while we take a break with our wedding party for some nostalgic photography.
