--- a/backend/static_info/templates/static_info/travel.html
+++ b/backend/static_info/templates/static_info/travel.html
@@ -35,7 +35,11 @@
 
     <h2>Accommodation</h2>
     <p>
-      We're working on reserving a selection of hotel room blocks for our out-of-town guests and we'll post information here as soon as it's available.
+      Our first hotel room block is at the <a href="http://www.coastplazahotelandsuites.com" target="_blank">Coast Plaza Hotel</a>. It's a beautiful 15 minute walk from The Rowing Club, or a brief four minute taxi ride. A "Standard Comfort Room" will be $209 per night and a One-Bedroom suite will be $259 per night. To book please call 1 800 663 1144 and use the group name "Rabinovitch and Simmons Wedding."
+    </p>
+
+    <p>
+      We'll have a second hotel option soon, so please check back.
     </p>
 
     <h2>Getting There</h2>
