--- a/backend/static_info/templates/static_info/people.html
+++ b/backend/static_info/templates/static_info/people.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-4">
     <div class="thumbnail">
       <img src="{% static 'static_info/people/angela.jpg' %}" />
       <div class="caption">
@@ -42,12 +42,23 @@
     </div>
   </div>
 
-  <div class="col-sm-6 col-md-4 col-md-offset-2">
+  <div class="col-sm-4">
     <div class="thumbnail">
       <img src="{% static 'static_info/people/rachel.jpg' %}" />
       <div class="caption">
         <p>
-          Rachel, Bride's Maid
+          Rachel, Bridesmaid
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="{% static 'static_info/people/heather.jpg' %}" />
+      <div class="caption">
+        <p>
+          Heather, Bridesmaid
         </p>
       </div>
     </div>
@@ -60,7 +71,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-4">
     <div class="thumbnail">
       <img src="{% static 'static_info/people/rob.jpg' %}" />
       <div class="caption">
@@ -71,12 +82,23 @@
     </div>
   </div>
 
-  <div class="col-sm-6 col-md-4 col-md-offset-2">
+  <div class="col-sm-4">
     <div class="thumbnail">
       <img src="{% static 'static_info/people/damir.jpg' %}" />
       <div class="caption">
         <p>
-          Damir, Groom's Man
+          Damir, Groomsman &amp; Master of Ceremonies
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="{% static 'static_info/people/cam.jpg' %}" />
+      <div class="caption">
+        <p>
+          Cam, Groomsman
         </p>
       </div>
     </div>
