Show description on R.S.V.P. details page

--- a/backend/rsvp/templates/rsvp/detail.html
+++ b/backend/rsvp/templates/rsvp/detail.html
@@ -82,6 +82,12 @@
           {% endfor %}
       </table>
 
+      {% for event in events %}
+      {% if event.description != ' ' %}
+      <p>{{ event.name }} - {{ event.description }}</p>
+      {% endif %}
+      {% endfor %}
+
       <div>
         <button
           class="btn btn-default btn-lg pull-right"
