Monetary gifts request copy

--- a/backend/rsvp/templates/rsvp/index.html
+++ b/backend/rsvp/templates/rsvp/index.html
@@ -20,7 +20,12 @@
     </h1>
 
     <p>
-      We are very excited for you to join us on our wedding day! We've been working hard to make it fantastic, but we need our family and friends with us to make it truly memorable.
+      We are very excited for you to join us on our wedding day!
+    </p>
+    <p>
+      <em>
+        When we sat down to create a gift registry, we realized that we didn't need anything! If you would instead like contribute to our honeymoon or renovations on our new home, it would be very much appreciated.
+      </em>
     </p>
     <p>
       Please enter the word we've included with your invitation into the input below and the site will fetch your information.
