--- a/backend/rsvp/templates/rsvp/detail.html
+++ b/backend/rsvp/templates/rsvp/detail.html
@@ -40,11 +40,9 @@
 
       <table class="table table-hover">
         <thead>
-          {% for guest in guest_group.guest_set.all %}
-          {% if forloop.first %}
           <tr>
             <th></th>
-            {% for event in guest.events.all %}
+            {% for event in events %}
             <th>
               {{ event.name }} ~ {{ event.datetime_start | date:'f a' }}
             </th>
@@ -53,7 +51,7 @@
           </tr>
         </thead>
         <tbody>
-          {% endif %}
+          {% for guest in guest_group.guest_set.all %}
           <tr>
             <td>{{ guest.name }}</td>
             {% for attendance in guest.attendance_set.all %}
