--- a/backend/rsvp/templates/rsvp/detail.html
+++ b/backend/rsvp/templates/rsvp/detail.html
@@ -96,6 +96,12 @@
       </div>
 
     </form>
+
+    <div class="clearfix">&nbsp;</div>
+
+    <p>
+      If you would like to get in touch with us, please <a href="mailto:wedding@rabinovitch.ca" target="_blank">send us an email</a>.
+    </p>
   </div>
 </div>
 {% endblock %}
