--- a/backend/static_info/templates/static_info/itinerary.html
+++ b/backend/static_info/templates/static_info/itinerary.html
@@ -30,6 +30,11 @@
     <p>
       Once our photographer is satisfied with us, we'll return to the Rowing Club for an evening of dinner, drinks and dancing.
     </p>
+    <p>
+      <em>
+        When we sat down to create a gift registry, we realized that we didn't need anything! If you would instead like contribute to our honeymoon or renovations on our new home, it would be very much appreciated.
+      </em>
+    </p>
   </div>
 </div>
 {% endblock %}
