--- a/backend/rsvp/templates/rsvp/index.html
+++ b/backend/rsvp/templates/rsvp/index.html
@@ -66,6 +66,12 @@
       </div>
       {% endif %}
     </form>
+
+    <div class="clearfix">&nbsp;</div>
+
+    <p>
+      If you would like to get in touch with us, please <a href="mailto:wedding@rabinovitch.ca" target="_blank">send us an email</a>.
+    </p>
   </div>
 </div>
 {% endblock %}
