Friday dinner page

--- a/backend/rsvp/templates/rsvp/detail.html
+++ b/backend/rsvp/templates/rsvp/detail.html
@@ -82,7 +82,12 @@
 
       {% for event in events %}
       {% if event.description != ' ' %}
-      <p>{{ event.name }} - {{ event.description }}</p>
+      <p>
+        {{ event.name }} -
+        <a href="{{ event.uri }}">
+          {{ event.description }}
+        </a>
+      </p>
       {% endif %}
       {% endfor %}
 
