Swap Cam for Carey in Groomsmen

--- a/backend/static_info/templates/static_info/people.html
+++ b/backend/static_info/templates/static_info/people.html
@@ -95,10 +95,10 @@
 
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="{% static 'static_info/people/cam.jpg' %}" />
+      <img src="{% static 'static_info/people/carey.jpg' %}" />
       <div class="caption">
         <p>
-          Cam, Groomsman
+          Carey, Groomsman
         </p>
       </div>
     </div>
