--- a/backend/static_info/templates/static_info/fri_dinner.html
+++ b/backend/static_info/templates/static_info/fri_dinner.html
@@ -25,7 +25,7 @@
       Dinner will be hosted at <a href="http://www.nuba.ca/nuba-in-kitsilano/" target="_blank">Nuba in Kitsilano</a>, located at <a href="https://goo.gl/maps/VKQ2F" target="_blank">3116 West Broadway in Vancouver</a>.
     </p>
     <p>
-      A vegetarian-friendly Mediterranean meal will be served. <a href=https://www.google.ca/#q=smart+casual" target="_blank"><em>"Smart Casual"</em></a> attire, please.
+      A vegetarian-friendly Mediterranean meal will be served. <a href="https://www.google.ca/#q=smart+casual" target="_blank"><em>"Smart Casual"</em></a> attire, please.
     </p>
     <p>
       If you haven't already done so, please <a href="/rsvp">update your R.S.V.P.</a>
