Copy change: lunch -> brunch

--- a/backend/static_info/templates/static_info/sun_lunch.html
+++ b/backend/static_info/templates/static_info/sun_lunch.html
@@ -16,10 +16,10 @@
 <div class="row">
   <div class="col-xs-12">
     <h1>
-      Sunday Lunch
+      Sunday Brunch
     </h1>
     <p>
-      Planning on being up late partying Saturday night? Us too. Join us and the rest of our closest friends for a brunch-menu lunch on {{ event.datetime_start|date:'l F dS, Y' }} at {{ event.datetime_start|date:'g:i a' }}
+      Planning on being up late partying Saturday night? Us too. Join us and the rest of our closest friends for brunch on {{ event.datetime_start|date:'l F dS, Y' }} at {{ event.datetime_start|date:'g:i a' }}
     </p>
     <p>
       We're going to <a href="http://www.chicharestaurant.com/" target="_blank">Chicha</a> located at <a href="https://goo.gl/maps/WwVgv" target="_blank">136 East Broadway</a>.
